Reenombrando titulo index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>username</h1>
+                <h1>usernamee</h1>
             </div>
 <div class="boton">
     <label for="btn-menu">Menu</label>
